Refactored Use-API Providers to use the service.ranking property
* removed the UseProviderComponent
* Use-API providers are now called in the order determined by their service.ranking
(the higher the service.ranking, the higher the priority)

--- a/contrib/scripting/sightly/js-use-provider/pom.xml
+++ b/contrib/scripting/sightly/js-use-provider/pom.xml
@@ -79,11 +79,18 @@
     <!-- D E P E N D E N C I E S                                                 -->
     <!-- ======================================================================= -->
     <dependencies>
+        <!-- OSGI -->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <!-- Sling -->
         <dependency>
             <groupId>org.apache.sling</groupId>
